--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 * {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-decoration: none !important;
 }
 
 #HeaderTextBlog {
@@ -45,7 +46,7 @@ body {
 .btnFav {
     width: 20px;
     height: 10px;
-   
+
     padding: 10px;
     padding-bottom: 10px;
     background: rgb(0, 0, 0) !important;
@@ -64,7 +65,7 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     align-content: center;
     padding: 10px;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: 100 !important;
     color: rgb(255, 208, 0) !important;
 
@@ -200,6 +201,41 @@ body {
 
 #backgroundBodyCard h5 {
     font-size: 30px;
+    text-shadow: -2px -1px 2px rgb(72, 72, 72);
     text-decoration: none !important;
+
+}
+
+#DropDownFavs {
+    width: 190px !important;
+    color: white;
+    margin-top: 20px;
+    padding-left: 10px !important;
+    text-align: left;
+    font-size: 20px;
+    height: auto;
+    border-radius: 0%;
+    background-color: black;
+
+
+
+}
+
+#DropDownFavs button {
+    padding: 0%;
+    margin-left: 10px;
+    display: inline-block;
+    color: red;
+    background-color: black;
+    text-align: center;
+    width: 5px;
+    margin: 2px solid white;
+
+}
+
+#imageCard {
+
+    width: auto;
+    height: 200px;
 
 }
