--- a/src/index.css
+++ b/src/index.css
@@ -177,3 +177,42 @@ a {
   color: #fff !important;
   transform: scale(1.05);
 }
+
+.characters-card {
+  background-image: url('https://t3.ftcdn.net/jpg/10/28/87/62/360_F_1028876221_yYd5P7xRvg7OYtfgchY3OFrWVC5TaUnQ.jpg');
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+  padding: 1rem;
+  margin: 1rem;
+  width: 300px;  /* Tamaño fijo para todas las cards */
+  height: 450px; /* Fijo para que tengan todas la misma altura */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #fff;
+  overflow: hidden;
+  transition: transform 0.3s ease;
+}
+
+.characters-card:hover {
+  transform: scale(1.05);
+}
+
+/* Imagen dentro de la card */
+.characters-card img {
+  width: 100%;
+  height: 250px; /* Tamaño fijo para las imágenes */
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 1rem;
+}
+
+/* Título o texto dentro de la card */
+.characters-card h3,
+.characters-card p {
+  margin: 0.25rem 0;
+  text-align: center;
+}
+
