--- a/src/index.css
+++ b/src/index.css
@@ -183,7 +183,7 @@ a {
   background-size: cover;
   background-position: center;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+  box-shadow: 0 4px 8px rgb(0, 0, 0);
   padding: 1rem;
   margin: 1rem;
   width: 300px;  /* Tamaño fijo para todas las cards */
